# AIops

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tradingagents_team_agent.md
quant-validation-agent/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
quant-validation-agent/docs/: cli_reference.md  data_requirement.md  limitation_and_risk.md  metric_definition.md  model_type_mapping.md  project_overview.md  quantitative_validation_scope.md  regulatory_framework_mapping.md  validation_output_spec.md
quant-validation-agent/examples/: sample_credit_score_data.csv  sample_lgd_ead_data.csv  sample_macro_history.csv  sample_macro_scenario.csv  sample_pd_calibration_request.md  sample_pd_timeseries.csv  sample_regulatory_validation_request.md  sample_scenario_failure_case.csv  sample_validation_full_request.md  sample_validation_output.md  sample_validation_request.md
quant-validation-agent/harness/: change_manifest.json  change_manifest.schema.json  data_contract.md  metric_policy.md  permission_policy.md  system_prompt.md  threshold_policy.json  threshold_policy.md  threshold_policy.schema.json  validation_workflow.md
quant-validation-agent/memory/: known_data_issues.md  known_methodology_limits.md  model_specific_notes.md  recurring_validation_findings.md
quant-validation-agent/middleware/: __init__.py  data_safety_guard.py  leakage_guard.py  output_completeness_guard.py  permission_guard.py  policy_change_guard.py  run_logger.py  sample_size_guard.py  schema_guard.py
quant-validation-agent/quant_validation_agent/: __init__.py  __main__.py  cli.py
quant-validation-agent/skills/: challenger_model_validation.md  credit_score_validation.md  ead_model_validation.md  lgd_model_validation.md  monitoring_validation.md  pd_model_validation.md  pd_multiplier_validation.md  validation_table_generation.md
quant-validation-agent/subagents/: calibration_checker.md  data_contract_checker.md  harness_debugger.md  metric_calculator.md  orchestrator.md  regression_diagnostics_reviewer.md  scenario_validator.md  stability_checker.md
validation-team-agent/: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
(+378 files in other folders)
