[project]
name = "risk_lib"
version = "0.1.0"
description = "Basel III / FSS risk management harness: PD/LGD, RWA(SA+IRB), BIS, limits, RAPM, validation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["risk_lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
