[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-validation-agent"
version = "0.1.0"
description = "Quantitative validation agent harness for credit risk models (scoring, PD, LGD, EAD, scenario regression)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Risk Management Validation Team" }]

dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "statsmodels>=0.14",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["tools*", "middleware*"]
exclude = ["tests*", "examples*", "docs*", "logs*", "reports*", "memory*", "skills*", "subagents*", "harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
