[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "validation-team-agent"
version = "0.1.0"
description = "Agentic Harness for bank risk model validation team"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "middleware*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
